# akb

./: .gitignore  .gitmodules  Makefile  README.md  akb.cabal  configure  lookup-keycode.cabal  makefile  notes  skb.cabal  stack.yaml
app/: Main.hs
notes/: letoram-2016-10-11.txt  letoram-2016-10-12.txt  letoram-2016-10-19.txt
src/: Akb.hs  BitMask.hs  KeySymbol.hs  KeySymbolDefinitions.hsc  KeySymbolToUTF.hs  Lib.hs  Modifiers.hs  NamesPatterns.hsc  OnKeyEvent.hs  Skb.hs  SkbFFI.hs  SkbFFI_stub.h  State.hs  Xkb.hs  generate_key_symbol_definitions.sh  generate_key_symbol_to_utf.sh  generate_modifier_names.sh  skb.c  skb.h  skb_state.h  test-libSkb.c  xkb.c
src/Bindings/: Xkbcommon.hsc  XkbcommonCompat.hsc  XkbcommonCompose.hsc  XkbcommonKeysyms.hsc  XkbcommonNames.hsc
src/Keymap/: CustomDvorak.hs
test/: Spec.hs
test/Akb/: Tests.hs
test/State/: Tests.hs
test/tests-from-c/: .gitignore  Makefile  fscanf-out-loop.c  gdb-loop-on-out-file-contents.ini  loop-on-out-file-contents.c  read-out-loop.c  test-akb.c  test-libskb.c  test-libxkb.c
