name:                akb
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/skb#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
-- build-type:          Configure
build-type:          Simple
-- extra-source-files:  configure
-- extra-tmp-files:     skb.buildinfo
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  include-dirs:      src
  other-extensions:     ForeignFunctionInterface
                      , PatternSynonyms
                      , NoImplicitPrelude
                      , OverloadedStrings
  exposed-modules: Akb
                 , NamesPatterns
                 , Modifiers
                 , KeySymbolDefinitions
                 , KeySymbolToUTF
                 , State
                 , OnKeyEvent
                 , Keymap.CustomDvorak
  build-tools:       hsc2hs
  build-depends:       base
                     , vector
                     , text
                     , data-default
                     , bindings-DSL
                     , groom
                     , bitmask
                     , protolude
  default-language:    Haskell2010
--   c-sources: src/skb.c
-- could not get the below options to work
--   extra-libraries: HSrts-ghc8.0.1
--   extra-lib-dirs: /home/j/var/stack/programs/x86_64-linux/ghc-8.0.1/lib/ghc-8.0.1/rts/

executable akb-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-tools:       hsc2hs
  build-depends:       base
                     , akb
                     , text
                     , data-default
                     , NinePServer
                     , bitmask
                     , protolude
  default-language:    Haskell2010

test-suite akb-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       State.Tests
  build-tools:       hsc2hs
  build-depends:       base
                     , akb
                     , tasty
                     , tasty-hunit
                     , data-default
                     , bitmask
                     , protolude
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/skb
