name:                skb
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/skb#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Configure
extra-source-files:  configure
extra-tmp-files:     skb.buildinfo
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  include-dirs:      src
  other-extensions:     ForeignFunctionInterface
                      , PatternSynonyms
  exposed-modules:     Skb
                     , Modifiers
                     , KeySymbolDefinitions
                     , State
                     , Keymap.CustomDvorak
  build-tools:       hsc2hs
  build-depends:       base >= 4.7 && < 5
                     , vector
                     , text
                     , data-default
  default-language:    Haskell2010
  c-sources:    skb.c
              , skb.h

executable skb-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , skb
                     , text
                     , data-default
  default-language:    Haskell2010

test-suite skb-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , skb
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/skb
